# rust_raytracer

./: .gitignore  Cargo.toml  README.md  rust_raytracer.code-workspace
.trunk/: trunk.yaml
loaders/: Cargo.toml
loaders/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs  matrix.rs  point.rs  quaternion.rs  tuple.rs  types.rs  vector.rs
mesh-loader/: Cargo.toml
mesh-loader/src/: lib.rs
src/: main.rs  ray.rs
src/accelerators/: camera.rs
src/camera/: mod.rs  perspective.rs
src/cameras/: mod.rs  perspective.rs
src/core/: film.rs  geometry.rs  interaction.rs  mod.rs  primitive.rs  sampler.rs  scene.rs  shape.rs  spectrum.rs  view.rs
src/integrators/: direct_lighting.rs  mod.rs
src/loaders/: gltf_loader.rs  mod.rs
src/materials/: constant.rs  lambertian.rs  matte.rs  mod.rs  pdf.rs
src/math/: mod.rs  point.rs  sampler.rs  vectors.rs
src/shapes/: mesh.rs  mod.rs  sphere.rs  triangle.rs
src/textures/: constant.rs  mod.rs
tracer/: Cargo.toml
tracer/src/: app.rs  lib.rs  main.rs
tracer/src/cameras/: perspective.rs
tracer/src/core/: bounds.rs  film.rs  geometry.rs  interaction.rs  material.rs  mod.rs  primitive.rs  ray.rs  sampler.rs  scene.rs  shape.rs  spectrum.rs  texture.rs  transform.rs  view.rs
tracer/src/integrators/: direct_lighting.rs  mod.rs
tracer/src/loaders/: gltf_loader.rs
tracer/src/materials/: constant.rs  matte.rs  mod.rs  pdf.rs
tracer/src/math/: mod.rs  point.rs  vectors.rs
tracer/src/shapes/: mesh.rs  sphere.rs  triangle.rs
tracer/src/textures/: constant.rs
vulkan_rasterizer/: Cargo.toml
vulkan_rasterizer/src/: main.rs
vulkan_rasterizer/src/core/: rhi.rs
