[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0" # For iterating through enums
strum_macros = "0.25" # For iterating through enums
math = {path = "../math"}
mesh-loader = {path = "../mesh-loader"}
chrono = "0.4.19"
log = "0.4.14"
pbr = "1.0.4"
rand = "0.8.4"
rayon = "1.5"
env_logger = "0.10.0"
pbrt4 = "0.2.0"
eframe = { version = "*", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
ply-rs = "0.1.3"
project-root = "0.2.2"
funty = "2.0.0" # fundamental traits (like numerics)
rfd = "0.14.0" # File diaglog

[dependencies.gltf]
version = "0.16"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false